<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:padding="24dp"
    android:paddingTop="16dp"
    tools:context=".ui.RegisterActivity">


    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="16dp"
        app:srcCompat="@drawable/ic_baseline_loyalty_24" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="132dp"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textColor="@color/yellow"
        android:textAllCaps="true"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/shr_hint_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"

            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/shr_hint_username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"

            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/shr_hint_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"

            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/shr_hint_repassword"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rePass_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/register" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_register"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_toStartOf="@id/register_register"
            android:layout_toLeftOf="@id/register_register"
            android:text="@string/back" />

    </RelativeLayout>
</LinearLayout>

