<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ManagerDetailActivity">

    <TextView

        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail"
        android:textSize="40sp"
        android:textStyle="bold" />



        <ListView
            android:id="@+id/listDetailManager"
            android:layout_width="match_parent"
            android:layout_height="450dp" />


    <TextView
        android:id="@+id/txtSaleManager"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dot_loading" />
    <TextView
        android:id="@+id/txtTotalManager"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dot_loading" />

    <Button
        android:id="@+id/btnAccept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        android:visibility="invisible" />

</LinearLayout>