<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ManagerActivity">

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hoaDon"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="vertical">

        <ListView
            android:id="@+id/managerList"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBack_manager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back" />

        <Button
            android:id="@+id/btnThongKe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/thongke" />
    </LinearLayout>


</LinearLayout>