<?xml version="1.0" encoding="utf-8"?>
<!--
  Developed by Haerul Muttaqin
  Last modified 4/7/19 7:40 PM
  Subscribe : https://www.youtube.com/haerulmuttaqin
  Copyright (c) 2019. All rights reserved
  -->

<!--TODO #2 this is a layout for detailed activity, please note the id-->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorBackground"
    tools:context=".ui.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true"
        android:theme="@style/Widget.Design.AppBarLayout">

        <com.google.android.material.appbar.CollapsingToolbarLayout

            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            app:title="@string/dot_loading">
            <ImageView
                android:id="@+id/imgDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>

            <TextView
                android:background="@color/colorNull"
                android:id="@+id/detailName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:layout_marginStart="20dp"
                android:text="@string/dot_loading"
                android:textSize="30sp"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_marginTop="-7dp"
                android:indeterminate="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp">

                <androidx.cardview.widget.CardView
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView

                            android:text="@string/price"
                            android:paddingLeft="14dp"
                            android:paddingRight="14dp"
                            android:paddingTop="14dp"
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <TextView

                            android:id="@+id/detailPrice"
                            android:text="@string/dot_loading"
                            android:paddingLeft="14dp"
                            android:paddingRight="14dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="14dp"
                            android:textSize="16sp"
                            android:textColor="@color/colorPrimaryText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center_vertical"
                android:drawablePadding="10dp"
                android:drawableEnd="@drawable/ic_info"
                android:drawableRight="@drawable/ic_info" />

            <androidx.cardview.widget.CardView
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:id="@+id/description_detail"
                    android:text="@string/dot_loading"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimaryText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center_vertical"
                android:drawablePadding="10dp"
                android:drawableEnd="@drawable/ic_info"
                android:drawableRight="@drawable/ic_info" />

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"

                >


                <Button
                    android:id="@+id/btnDiv"
                    android:layout_width="10dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="-" />

                <TextView
                    android:id="@+id/txtQuantity"
                    android:layout_width="10dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="1"
                    android:textAlignment="center"/>

                <Button
                    android:id="@+id/btnPlus"
                    android:layout_width="10dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="+" />
            </LinearLayout>
            <androidx.cardview.widget.CardView
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp">

                <androidx.cardview.widget.CardView
                    android:layout_weight="1"
                    app:cardUseCompatPadding="true"
                    app:cardBackgroundColor="#D0FFDB"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp">
                    <TextView

                        android:id="@+id/add_to_cart"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="?attr/selectableItemBackground"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/add_to_cart"
                        android:padding="14dp"
                        android:textSize="16sp"
                        android:textColor="#2A7E2F"
                        android:gravity="center_vertical"
                        android:drawablePadding="10dp"
                        android:drawableLeft="@drawable/ic_add_to_cart"
                        android:drawableStart="@drawable/ic_add_to_cart" />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_weight="1"
                    app:cardUseCompatPadding="true"
                    app:cardBackgroundColor="#FFE1E1"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp">

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>